fixing cards images on small devises

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -135,6 +135,10 @@ body{
 					height: 210px !important;
 				}
 			}
+
+			.ui.bottom.attached.button{
+				width: 290px;
+			}
 		}
 
 	}
